RESOLVED FIXED180941
SameOrigin and CORS fetch should fail on opaque responses served from ServiceWorker
https://bugs.webkit.org/show_bug.cgi?id=180941
Summary SameOrigin and CORS fetch should fail on opaque responses served from Service...
youenn fablet
Reported 2017-12-18 13:21:23 PST
SameOrigin and CORS fetch should fail on opaque responses served from ServiceWorker
Attachments
Patch (35.99 KB, patch)
2017-12-18 13:27 PST, youenn fablet
no flags
Patch (10.45 KB, patch)
2017-12-18 13:44 PST, youenn fablet
no flags
Patch (14.27 KB, patch)
2017-12-18 14:52 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-12-18 13:27:37 PST
youenn fablet
Comment 2 2017-12-18 13:44:53 PST
youenn fablet
Comment 3 2017-12-18 14:52:56 PST
WebKit Commit Bot
Comment 4 2017-12-18 16:15:37 PST
Comment on attachment 329687 [details] Patch Clearing flags on attachment: 329687 Committed r226084: <https://trac.webkit.org/changeset/226084>
WebKit Commit Bot
Comment 5 2017-12-18 16:15:39 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-12-18 16:21:22 PST
Note You need to log in before you can comment on or make changes to this bug.