SameOrigin and CORS fetch should fail on opaque responses served from ServiceWorker https://bugs.webkit.org/show_bug.cgi?id=180941

Patch by Youenn Fablet <youenn@apple.com> on 2017-12-18
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/fetch-response-taint.https-expected.txt:
* web-platform-tests/service-workers/service-worker/opaque-response-preloaded.https-expected.txt:

Source/WebCore:

Covered by rebased tests.

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::checkResponseCrossOriginAccessControl):

Canonical link: https://commits.webkit.org/196844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226084 268f45cc-cd09-0410-ab3c-d52691b4dbfc