Source/WebCore/platform/network/ResourceErrorBase.h
@@ -33,7 +33,7 @@ namespace WebCore {
 
 class ResourceError;
 
-extern const char* const errorDomainWebKitInternal; // Used for errors that won't be exposed to clients.
+WEBCORE_EXPORT extern const char* const errorDomainWebKitInternal; // Used for errors that won't be exposed to clients.
 
 class ResourceErrorBase {
 public:
