Source/WebKit/WebProcess/Storage/ServiceWorkerClientFetch.h
@@ -57,6 +57,8 @@ public:
 private:
     ServiceWorkerClientFetch(WebServiceWorkerProvider&, Ref<WebCore::ResourceLoader>&&, uint64_t identifier, Ref<WebSWClientConnection>&&, bool shouldClearReferrerOnHTTPSToHTTPRedirect, Callback&&);
 
+    std::optional<WebCore::ResourceError> validateResponse(const WebCore::ResourceResponse&);
+
     void didReceiveResponse(WebCore::ResourceResponse&&);
     void didReceiveData(const IPC::DataReference&, int64_t encodedDataLength);
     void didReceiveFormData(const IPC::FormDataReference&);
